# twitch-irc-bot

./: .env.example  Cargo.toml
src/: listener.rs  main.rs  sender.rs  utils.rs
src/Message/: mod.rs
src/configuration/: mod.rs
src/message/: mod.rs
