[package]
name = "twitch-irc-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { version = "*" }
clap = { version = "*", features = ["cargo"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }
twitch-irc = { version = "*", features = ["transport-ws"] }
tokio = { version = "*", features = ["full"] }